# dialectid

./: .gitignore  .nojekyll  LICENSE  MANIFEST.in  README.md  README.rst  dialectid.html  environment.yml  index.html  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: pip.yaml  publish.yml  test.yaml
dialectid/: __init__.py  model.py  text_repr.py  utils.py
dialectid/tests/: __init__.py  test_model.py  test_text_repr.py  test_utils.py
dialectid_files/libs/bootstrap/: bootstrap-86a43b35068b9618d9170b1f12e67d04.min.css  bootstrap.min.css
quarto/: dialectid.qmd  references.bib
quarto/data/: ar-recall.csv  ar-similarity.json  de-recall.csv  en-recall.csv  en-similarity.json  es-recall.csv  es-similarity.json  fr-recall.csv  hi-recall.csv  in-recall.csv  it-recall.csv  nl-recall.csv  pl-recall.csv  pt-recall.csv  ru-recall.csv  tl-recall.csv  tr-recall.csv  zh-recall.csv
