[project]
name = 'dialectid'
description = "Set of algorithms to detect the dialect of a given text"
readme = "README.rst"
dependencies = [
    'numpy',
    'scikit-learn>=1.3.0',
    'microtc',
    'EncExp'
]
dynamic = ['version']
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]


[tool.setuptools.dynamic]
version = {attr = 'dialectid.__version__'}

[tool.setuptools]
packages = ['dialectid', 'dialectid.tests']

[project.urls]
Homepage = "https://ingeotec.github.io/dialectid"
Repository = "https://github.com/INGEOTEC/dialectid"
Issues = "https://github.com/INGEOTEC/dialectid/issues"